# simpleECS

./: CMakeLists.txt  README.md  simpleECS.cpp
src/: Container.hpp
src/Data/: ComponentArray.hpp  System.hpp  Types.hpp
src/Data/Components/: TransformComponent.hpp
src/Data/Systems/: PhysicsSystem.hpp
src/Managers/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp  Types.hpp
